# rust-fstack

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.sh  build-release.sh
db/: remove-db.sh  stack.yml  start-db.sh
src/backend/: Cargo.toml
src/backend/migrations/: initial.sql
src/backend/src/: auth.rs  db.rs  db_traits.rs  handler.rs  handler_utils.rs  lib.rs  main.rs  router.rs
src/entry/: Cargo.toml
src/entry/src/: main.rs
src/frontend/: .gitignore  Cargo.toml  package.json
src/frontend/scss/: site.scss
src/frontend/src/: api.rs  forum.rs  front_page.rs  lib.rs  login.rs  main.rs  router.rs
src/frontend/static/: index.html
src/types/: Cargo.toml
src/types/src/: lib.rs
