[package]
name = "frontend"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jaakko.hannikainen@solita.fi>"]
edition = "2018"

[dependencies]
failure = "0.1"
lazy_static = "1.4.0"
log = "0.4"
serde_json = "1.0"
stdweb = "0.4"
types = { path = "../types" }
web_logger = "0.1"
yew = "0.9.2"
yew-router = "0.6.1"
